--- a/Project 1/Report.qmd
+++ b/Project 1/Report.qmd
@@ -19,9 +19,13 @@ fig-responsive: false
 library(here)
 library(knitr)
 library(ggplot2)
-
+library(readxl)
+library(dplyr)
+library(scales)
+library(RColorBrewer)
+library(scales)
 # Load and run the data extraction script
-source(here("Project 1" ,"Scripts", "EDA.R"))
+data <- read_excel(here("Project 1", "Data", "Dataset_tourism.xlsx"))
 ```
 
 # Introduction
@@ -30,7 +34,7 @@ The Swiss tourism industry plays a crucial role in the national economy, with re
 
 Part a) of the project focuses on predicting the total number of overnight stays in the canton of Vaud. This analysis aims to provide a broad understanding of tourism dynamics and assist local stakeholders in planning and decision-making processes. Part b) delves into a more detailed prediction for Luzern, focusing on overnight stays by Japanese tourists, a demographic that presents unique challenges due to specific preferences and travel behaviors.
 
-Through the application of ARIMA modeling—a method chosen for its effectiveness in handling non-stationary time series data with seasonal variations—this project not only aims to generate reliable forecasts but also to equip tourism operators and policymakers with the tools needed to enhance service delivery and optimize marketing strategies. The inclusion of confidence intervals in our predictions will further aid stakeholders in assessing risk and making informed decisions in a sector known for its volatility.
+Through the application of various forecasting models this project not only aims to generate reliable forecasts but also to equip tourism operators and policymakers with the tools needed to enhance service delivery and optimize marketing strategies. The inclusion of confidence intervals in our predictions will further aid stakeholders in assessing risk and making informed decisions in a sector known for its volatility.
 
 # Data
 ## Description
@@ -48,7 +52,7 @@ Below is a random sample snapshot of the data to provide a tangible sense of the
 kable(sample_n(data, 5))
 ```
 
-## Processing
+## Processing Data
 For part a) of the project, we focused on the Canton of Vaud, filtering the data for all overnight stays in this region. The inclusion of "Herkunftsland - Total" in the `Herkunftsland` column helped with the filtering as it provided a monthly total of visitors of all nationalities. We therefore filtered on the columns of `Kanton` and `Herkunftsland`. The data was then converted into a time series format, with the `Date` column created by combining the `Monat` and `Jahr` columns. This transformation enabled us to visualize trends and seasonality in the data, providing a foundation for our forecasting models.
 <details>
 ```r
@@ -77,13 +81,104 @@ luzern_data <- luzern_data |>
 ```
 </details>
 
+To aid in the creation of the tsibbles for both parts of the project, we created a conversion table for the months in German to their numerical equivalent. This conversion was necessary for the correct ordering of the months in the time series data.
+
+<details>
+```r
+# Create a tsibble
+month_conversion <- c("Januar" = "1", "Februar" = "2", "März" = "3", "April" = "4", 
+                      "Mai" = "5", "Juni" = "6", "Juli" = "7", "August" = "8",
+                      "September" = "9", "Oktober" = "10", "November" = "11", "Dezember" = "12")
+```
+</details>
+
 ## Analysis
 
-The average number of overnight stays per month across all regions is `r mean(data$value, na.rm = TRUE)`.
-The maximum number of overnight stays recorded in a single month was `r max(data$value, na.rm = TRUE)`.
+The analysis of the data involved visualizing the trends and seasonality in overnight stays for both Vaud and for Japanese tourists in Luzern. This visualization was crucial for understanding the patterns in the data and identifying any anomalies or trends that could inform our forecasting models. The time series plots below provide a clear representation of the overnight stays in Vaud and Luzern, highlighting the seasonal variations and trends over time.
 
+```{r, echo = FALSE, message = FALSE, warning=FALSE, fig.width=8, fig.height=3}
+filtered_df <- data %>%
+  filter(Herkunftsland == "Japan", Kanton == "Luzern")
+
+
+month_map <- c(Januar = "01", Februar = "02", März = "03", April = "04", Mai = "05", Juni = "06", 
+               Juli = "07", August = "08", September = "09", Oktober = "10", November = "11", Dezember = "12")
+
+filtered_df$Monat_num <- as.numeric(sapply(filtered_df$Monat, function(x) month_map[x]))
+
+filtered_df$Date <- as.Date(paste(filtered_df$Jahr, filtered_df$Monat_num, "1", sep="-"), "%Y-%m-%d")
+
+filtered_df_2 <- data %>%
+  filter(Kanton == "Vaud") %>%
+  na.omit()
+
+month_map <- c(Januar = "01", Februar = "02", März = "03", April = "04", Mai = "05", Juni = "06", 
+               Juli = "07", August = "08", September = "09", Oktober = "10", November = "11", Dezember = "12")
+
+filtered_df_2$Monat_num <- as.numeric(sapply(filtered_df_2$Monat, function(x) month_map[x]))
+
+filtered_df_2$Date <- as.Date(paste(filtered_df_2$Jahr, filtered_df_2$Monat_num, "1", sep="-"), "%Y-%m-%d")
+# Combine the data frames
+combined_df <- bind_rows(
+  filtered_df %>% mutate(Region = "Luzern"),
+  filtered_df_2 %>% mutate(Region = "Vaud")
+)
+
+# Plot using ggplot2 with facet_wrap
+ggplot(data = combined_df, aes(x = Date, y = value)) +
+  geom_line(color = "#2C3E50", size = 1) +  
+  geom_point(color = "#E74C3C", size = 2, alpha = 0.7) +  
+  scale_x_date(labels = date_format("%Y-%b"), breaks = "6 month") + 
+  scale_y_continuous(labels = comma) + 
+  labs(title = "Monthly Overnight Stays Over the Years",
+       subtitle = "Analyzing trends of bookings by tourists",
+       x = "Date", y = "Number of Overnight Stays") +
+  theme_minimal() +
+  theme(
+    plot.title = element_text(face = "bold", hjust = 0.5),
+    plot.subtitle = element_text(face = "italic"),
+    axis.title.x = element_text(vjust = -0.2),
+    axis.title.y = element_text(vjust = 1.5),
+    panel.grid.minor = element_blank(),
+    axis.text.x = element_text(angle = 45, hjust = 1),
+    legend.position = "none"  
+  ) +
+  facet_wrap(~Region, scales = "free_y")  # Faceting by region
+```
+### Seasonal Peaks and Troughs
+- **Lucerne**: Seasonal peaks in overnight stays by Japanese tourists are observed in the summer months (June, July, August) and troughs in the winter months (January, February). 
+- **Vaud**: Similar seasonal peaks are observed for all tourists, indicating the popularity of the summer season and reduced interest in the winter, likely due to weather conditions and fewer attractions.
+
+### Annual Fluctuations
+- **Lucerne**: From 2005 to 2019, the peaks and troughs in overnight stays by Japanese tourists are regular, but the prominence of peaks has decreased since 2015 showing a downward trend, potentially relating to economic stress within Japan. The highest values of overnight stays by Japanese tourists were observed from 2005 to 2007 (17,000-19,000 overnight stays per year), followed by the decline.
+- **Vaud**: From 2005 to 2019, the number of overnight stays by all tourists gradually increases, especially after 2014, reaching peaks in 2018 and 2019 (around 3,000,000 overnight stays). This may indicate growing popularity of the region and improved tourist infrastructure.
+
+### COVID-19 Pandemic
+- In 2020, the number of overnight stays dropped sharply to minimal levels in both regions. In Lucerne, annual overnight stays by Japanese tourists fell to less than 7,000, and in Vaud, the number dropped to around 1,500,000 for all tourists. This is attributed to global travel restrictions and a general decline in tourist activity.
+- In 2021, numbers remained low, but a gradual recovery began towards the end of the year. This could be due to the easing of restrictions and renewed interest in travel.
+- By 2023, recovery continued, although peak numbers have not yet reached pre-pandemic levels, likely due to ongoing safety concerns and changing tourist preferences.
 
 # Forecating Methodology
+
+In forecasting the trends of tourist visits in the cantons of Vaud and Luzern, we compared the strengths of various statistical models to account for the intricate dynamics and seasonality inherent in tourism data. The selection of Exponential Smoothing State Space Model (ETS), Autoregressive Integrated Moving Average (ARIMA), ARIMA with dynamic regression, and Time Series Linear Model (TSLM) is predicated on their efficacy in handling data with distinct patterns and external influences:
+
+**ETS Models** are particularly adept at capturing seasonal variations and trends without assuming stationarity in the time series data. This makes ETS models highly suitable for our tourism data, where seasonal peaks and evolving trends are prominent due to varying tourist preferences and external economic conditions.
+
+**ARIMA Models** are chosen for their flexibility in modeling a wide range of data behaviors through differencing, making them capable of stabilizing the non-stationary elements of our series. This model is robust in dealing with the autocorrelation within the data, allowing for precise short-term forecasts which can be crucial for operational planning in tourism management.
+
+**ARIMA with Dynamic Regression** extends the basic ARIMA framework by incorporating exogenous variables, such as currency exchange rates and dummy variables for shock global events such as COVID19, which are presumed to influence tourist inflows. This approach is particularly useful for understanding and forecasting the impact of external economic factors on tourism, such as the _YEN vs CHF_ exchange rate's effect on Japanese visitors in Luzern.
+
+**TSLM** offers a regression-based approach tailored to time series data, allowing the inclusion of both seasonal dummies and trends within the model. It provides a structured way to incorporate multiple seasonal cycles and linear trends, making it invaluable for long-term strategic planning where understanding the impact of specific time events (like COVID19) is essential.
+
+These models were chosen to address the specific challenges presented by the dataset, including the need to forecast accurately in the face of seasonal fluctuations, economic impacts, and unexpected global events. The following sections will detail the model configurations, and the rationale behind the choice of each modeling technique in the context of our objectives, and finally the selected model based off our chosen metric.
+
+## ETS Model
+
+## ARIMA
+
+## TSLM
+
+## Model Selection
 
 # Results
 
@@ -91,5 +186,5 @@ The maximum number of overnight stays recorded in a single month was `r max(data
 
 # Appendix
 ## Links
-- [Data Source](https://www.investing.com/currencies/chf-jpy-historical-data)
+- [Data Source - chf/jpy](https://www.investing.com/currencies/chf-jpy-historical-data)
 - [Code Repository]()
