--- a/Project 1/Report.qmd
+++ b/Project 1/Report.qmd
@@ -243,4 +243,4 @@ kable(sample_n(data, 5))
 
 ## Links
 - [Data Source - chf/jpy](https://www.investing.com/currencies/chf-jpy-historical-data)
-- [Code Repository]()
+- [Code Repository](https://github.com/faberunil/Forecasting-II)
